fix: z-index required for notification-stream component

--- a/src/app/layout/notification-stream/notification-stream.component.scss
+++ b/src/app/layout/notification-stream/notification-stream.component.scss
@@ -6,6 +6,7 @@
   right: 20px;
   max-height: 40vh;
   max-width: 40vw;
+  z-index: 9;
 }
 
 /** TODO: Move to root as generic style */
